try to fix mobile filters rendering weird on iOS

--- a/src/app/pages/exicon/exicon.page.scss
+++ b/src/app/pages/exicon/exicon.page.scss
@@ -22,6 +22,7 @@ ion-content {
 
     ion-chip {
       margin: 2px;
+      display: inline-block;
     }
 
     ion-label h2 {
